--- a/18th_August_Python_Basics.ipynb
+++ b/18th_August_Python_Basics.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**TOPIC**: Python Basics Variable"
+        "#TOPIC: Python Basics Variable"
       ],
       "metadata": {
         "id": "s4xN7zIUAAUz"
